pod-security/baseline/disallow-host-process/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: busybox02
    image: busybox:1.35
