pod-security/baseline/disallow-host-process/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: false
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
