pod-security/baseline/disallow-host-process/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: busybox01
        image: busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
      - name: busybox02
        image: busybox:1.35
