pod-security/baseline/disallow-host-process/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: container02
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: true
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
  - name: container02
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: false
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      windowsOptions:
        hostProcess: false
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
      - name: container02
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: true
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
      - name: container02
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: dummyimagename
        securityContext:
          windowsOptions:
            hostProcess: false
